--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,19 +1,49 @@
+header h1 {
+    font-family: poppins sans-serif;
+    font-size: 100px;
+    margin-right: 100px;
+    padding-right: 50px;
+    text-align: center;
+}
+
+header h1 span {
+    font-family: noto-naksh-arabic;
+    text-align: right;
+    font-size: 100px;
+    margin-left: 100px;
+    padding-right: 50px;
+}
+
+nav ul {
+    margin: auto;
+}
+
 nav li {
     list-style-type: none;
     color: black;
-    text-align: left;
+    text-align: center;
     float: left;
     margin: 0;
     padding-right: 10px;
 }
 
 nav a {
-    color: black;
+    color: white;
     text-decoration: none;
+    font-size: 90%;
+    font-family: roboto;
+    margin-top: 5%;
 }
 
 nav a:hover {
     font-weight: bold;
+}
+
+#nav-block {
+    width: 100%;
+    height: 30px;
+    background-color: black;
+    text-align: center;
 }
 
 #home {
