--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,8 +23,8 @@ nav li {
     color: black;
     text-align: center;
     float: left;
-    margin: 0;
-    padding-right: 10px;
+    padding-right: 15px;
+    font-size: 25px;
 }
 
 nav a {
