--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,8 +14,9 @@ header h1 span {
     padding-right: 50px;
 }
 
-nav ul {
-    margin: auto;
+#nav-center {
+    margin: 0 auto;
+    display: inline-block;
 }
 
 nav li {
@@ -41,7 +42,7 @@ nav a:hover {
 
 #nav-block {
     width: 100%;
-    height: 30px;
+    height: 70px;
     background-color: black;
     text-align: center;
 }
