--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 header h1 {
-    font-family: poppins sans-serif;
+    font-family: poppins, sans-serif;
     font-size: 100px;
     margin-right: 100px;
     padding-right: 50px;
@@ -45,8 +45,14 @@ nav a:hover {
     height: 70px;
     background-color: black;
     text-align: center;
+    border: none;
 }
 
 #home {
     clear: both;
+    margin-top: 50px;
+}
+
+.text-info {
+    width: 70%;
 }
