--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,4 +67,20 @@ nav a:hover {
 .text-info {
     font-family: 'Roboto', sans-serif;
     width: 70%;
+    border: none;
+    display: inline-block;
+    height: 600px;
+}
+
+.external-links-or-images {
+    border: none;
+    width: 30%;
+    float: right;
+    height: 600px;
+}
+
+.external-links-or-images img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
