--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -69,7 +69,7 @@ nav a:hover {
 }
 
 .text-info h3 {
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .text-info {
